Fixed visual-card alignment (#3795)

--- a/client/app/assets/less/redash/redash-newstyle.less
+++ b/client/app/assets/less/redash/redash-newstyle.less
@@ -237,6 +237,10 @@ body {
   float: right;
 }
 
+.visual-card-list {
+  margin: -5px 0 0 -5px; // compensate for .visual-card spacing
+}
+
 .visual-card {
   background: #FFFFFF;
   border: 1px solid fade(@redash-gray, 15%);
@@ -299,7 +303,6 @@ body {
   .visual-card {
     width: 100%;
     padding: 5px;
-    margin: 5px 0;
 
     img {
       width: 48px;
